2.9.6
-----
1. Use history length to determine if back button should be shown or not.
2. Long-press on player's icon (in main toolbar) to show sync dialog.
3. Allow multi-line text entries in browse view list.

2.9.5
------
1. For LMS 8.3 add album-artist when favouriting an album.
2. Fix add/play all for mixes when called from custom action.
3. Reduce dialog buttons min-width if screen is 400px or less.
4. Always use HTML for 'textarea' values.
5. For mobile devices add a search button at the right of search fields
   containing text.

2.9.4
-----
 1. Allow 'lmsbrowse' custom actions from now-playing.
 2. Remove space between star ratings so that eliding works better.
 3. Use bold font for titles of other servers in 'Manage players' dialog.
 4. Long-press on count/duration in queue to show transfer queue dialog.
 5. Reduce frequency of status polling during playback.
 6. Don't send a status message for a player if one is already being processed
    by LMS.
 7. Recalculate (i.e. set to 0) queue duration when cleared.
 8. Remove padding from track list in now-playing album info view.
 9. Refresh queue if show track numbers setting changed.
10. Check URL is not 'null' before adding to playlist.
11. Store 'theme' setting in local storage after reading defaults from server.
12. Remove padding between volume sliders and buttons in 'Manage players'
    dialog if width is 500px or less.

2.9.3
-----
1. Only show updates available if settings are unlocked.
2. Translation updates.
3. Fix missing add/play buttons for Bliss mixes.
4. Add 'All Songs' entry to genres and years.
5. Add 'Years' under genre browsing.
6. Allow to pin 'wavin:' favourites to home screen.
7. Change 'Track' to 'Title' and 'Track#' to 'Track' in advanced search.
8. Fix add/play all discs when Material set to always collapse.
9. Treat as HTML if title includes '<br/>'

2.9.2
-----
1. Map JPG icons as well as PNG icons.
2. Add icon mapping for Accuradio.
3. Fix splitter moving on mobile browsers.